# mlb

./: .gitignore  .gitmodules  airflow_test_setup.py  environment.yml  pyproject.toml  pytest.ini  temp_do_run.sh
benchmarks/backbone_and_seq_design/bench_ppi_demo/: inputs.txt  ml_benchmarks  required.txt  run.sh
benchmarks/backbone_and_seq_design/bench_ppi_demo/scripts/: generate_oracle_outputs_from_threaded_designs.sh  generate_threaded_design_from_backbone.sh  score.sh
benchmarks/backbone_and_seq_design/common_scripts/: af2_initial_guess.sh  mpnn_single_ppi.sh  ppi_score.py
config/: gitea.ini
config/airflow/: airflow_test.cfg  environment.yaml  run_airflow_test.sh
config/airflow/dags/: test_dag.py
ide/: runtests.py
ide/whs/: m.sublime-workspace  ml_benchmarks.sublime-project  ml_benchmarks.sublime-workspace  mlb.sublime-project  test_cli.sh  test_server.sh
methods/backbone_and_seq_design/bench_ppi_demo/old_ppi_diffusion/: generate_threaded_design.sh
mlb/: __init__.py  specifications.py
mlb/backend/: __init__.py  __main__.py  backend.py  gitea.py  server.py
mlb/frontend/: __init__.py  client.py
mlb/frontend/cli/: __init__.py  __main__.py  mlbtool.py
mlb/models/: base.py  spec.py
mlb/run/: __init__.py  shell.py
mlb/tests/: __init__.py  conftest.py  test_airflow.py  test_dag.py  test_specifications.py
mlb/tests/backend/: test_server.py
mlb/tests/run/: test_shell.py
