[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'mlb'
version = '0.0.0'
dependencies = [
  'fastapi[standard]',
  'uvicorn[standard]',
  'sqlmodel',
  'python-daemon',
  'RestrictedPython',
  'pandoc',
  'jupyter',
  'submitit',
  'typer',
  # 'asciidoctor'
]
requires-python = '>=3.12'
authors = [
  {name = 'Will Sheffler', email = 'willsheffler@gmail.com'},
  {name = 'Brian Coventry'},
  {name = 'Rohith Krishna'},
]
maintainers = [
  {name = 'Will Sheffler', email = 'willsheffler@gmail.com'},                         
]
description = 'Benchmarks and task automation for ipd software'
# readme = 'README.md'
# license = {file = 'LICENSE.txt'}
keywords = []
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python'
]

[project.urls]
Repository = 'https://github.com/baker-laboratory/ml_benchmark'
'Bug Tracker' = 'https://github.com/baker-laboratory/ml_benchmark/issues'

[project.scripts]
mlb = 'mlb.frontend.cli.__main__:main'
mlbserver = 'mlb.backend.__main__:main'

[tool.pyright]
include = ["rf_diffusion", "lib/rf2aa/rf2aa", "lib/rf2aa/lib/ipd/ipd"]
exclude = [
    "**/__pycache__",
]
defineConstant = { DEBUG = true }
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
pythonPlatform = "Linux"
requires-python = ">=3.11"
pythonVersion = "3.12"
executionEnvironments = [
  { root = "/home/sheffler/sw/MambaForge/envs/pyright/bin/python", pythonVersion = "3.12", pythonPlatform = "Linux", extraPaths = [] },
]

[tool.ruff]
lint.ignore = [
   'E731', #  [ ] Do not assign a `lambda` expression, use a `def`
   'E402', #  [ ] Module level import not at top of file
   'E741', #  [ ] Ambiguous variable name: `I`
   'E701', #  [ ] Multiple statements on one line (colon)
   'F403', #  [ ] `from Attention_module import *` used; unable to detect undefined names
   'F405',
   'F821',
   'F841',

]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|ic)$"
line-length = 111
target-version = "py39"
format.quote-style = "single"
format.indent-style = "space"
format.docstring-code-format = true

[tool.pytest.ini_options]
minversion = 6.0
pythonpath = '.'
testpaths = ['mlb/tests']
markers = [
    'slow: marks tests as slow (deselect with -m "not slow")',
    'fast: tests that run in a second or two',
    'noparallel: tests teat cant run in parallel',
]
